websocket config prepared
